[package]
name = "mevbot-ws-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3.28"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
anyhow = "1.0.62"
backoff = "0.4.0"
bincode = "1.3.3"
borsh = "0.9.1"
bs58 = "0.5.1"
chrono = "0.4.26"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.17.9"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.86"
solana-sdk = "~2.2.1"
solana-transaction-status = "~2.2.1"
tonic = "0.12.1"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"